# Osu-Beatmap-Seekman

./: .gitignore  README.md  index.html  package-lock.json  package.json  run.ps1
.github/workflows/: release-android.yml  release-desktop.yml
scripts/: push-release.ps1
src/: App.tsx  api.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
