[package]
name = "osu_beatmap_seekman"
version = "1.1.1"
description = "osu! ranked beatmapset downloader"
authors = ["Codex"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"
