[package]
name = "osu_beatmap_seekman"
version = "2.1.2"
description = "osu! ranked beatmapset downloader"
authors = ["Codex"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
md-5 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"
